<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/BackgroundColor"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        >
        <ImageView
            android:id="@+id/icon_menu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/menu_icon"
            android:theme="@style/IconColor"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/TextColorImportant"
            app:layout_constraintEnd_toStartOf="@id/icon_theme"
            app:layout_constraintStart_toEndOf="@id/icon_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_theme"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/IconColorTheme"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/numbers_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/operations_text"
            android:textStyle="normal"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextColorSub"
            app:layout_constraintTop_toTopOf="@id/numbers_guideline"/>

        <TextView
            android:id="@+id/operation_result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/operations_text"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginTop="10dp"
            android:textAlignment="textEnd"
            android:theme="@style/TextColor"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/operations_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/operations_guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingBottom="20dp"
            android:rowCount="5"
            android:columnCount="4"
            >
            <Button
                android:id="@+id/empty_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonOperation"
                android:text="@string/empty_button"
                />
            <ImageButton
                android:scaleY="0.95"
                android:id="@+id/delete_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonOperation"
                android:background="@drawable/background_button"
                android:src="@drawable/baseline_backspace_24"
                tools:ignore="ContentDescription" />
            <Button
                android:id="@+id/percent_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonOperation"
                android:text="@string/percent_button"
                />
            <Button
                android:id="@+id/division_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonOperation"
                android:text="@string/division_button"
                />
            <Button
                android:id="@+id/seven_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/seven_button"
                />
            <Button
                android:id="@+id/eight_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/eight_button"
                />
            <Button
                android:id="@+id/nine_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/nine_button"
                />
            <Button
                android:id="@+id/multiply_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonOperation"
                android:text="@string/multiply_button"
                />
            <Button
                android:id="@+id/four_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/four_button"
                />
            <Button
                android:id="@+id/five_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/five_button"
                />
            <Button
                android:id="@+id/six_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/six_button"
                />
            <Button
                android:id="@+id/minus_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonOperation"
                android:text="@string/minus_button"
                />
            <Button
                android:id="@+id/one_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/one_button"
                />
            <Button
                android:id="@+id/two_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/two_button"
                />
            <Button
                android:id="@+id/three_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/three_button"
                />
            <Button
                android:id="@+id/sum_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonOperation"
                android:text="@string/sum_button"
                />
            <Button
                android:id="@+id/double_zero_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/double_zero_button"
                />
            <Button
                android:id="@+id/zero_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/zero_button"
                />
            <Button
                android:textSize="40sp"
                android:id="@+id/dot_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonNumber"
                android:text="@string/dot_button"
                />
            <Button
                android:id="@+id/equals_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                style="@style/ButtonOperation"
                android:text="@string/equals_button"
                />
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <FrameLayout
        android:id="@+id/bottom_history"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="horizontal"
            android:theme="@style/BottomSheet"
            android:background="@drawable/background_bottom_sheet">
            <ImageView
                android:id="@+id/close_sheet"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/baseline_close_24"
                android:theme="@style/IconColor"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/historial"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/TextColorImportant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textView3"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ListView
                        android:id="@+id/history_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>